Fixed mobile gradient cutoff

--- a/cernera_me/src/components/user/User.module.scss
+++ b/cernera_me/src/components/user/User.module.scss
@@ -4,7 +4,7 @@
   display: inline-block;
 
   &__image {
-    opacity: 0.5;
+    opacity: 0.65;
     object-fit: cover;
     cursor: pointer;
     width: 10vw;
